--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint src && eslint test",
-    "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
-    "build:commonjs": "babel src -d lib",
+    "build": "npm run build:cjs && npm run build:umd && npm run build:umd:min",
+    "build:cjs": "babel src -d lib",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-observable.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-observable.min.js",
-    "build_tests": "rm -rf temp && babel test -d temp",
+    "build:tests": "rm -rf temp && babel test -d temp",
     "clean": "rimraf lib temp dist",
-    "test": "npm run build && npm run build_tests && mocha temp && npm run test_typings",
-    "test_typings": "tsc test/typings.ts --outFile temp/typings.js --target ES2015 --moduleResolution node",
-    "prepublish": "npm run clean && npm run lint && npm test"
+    "check": "npm run lint && npm run test",
+    "test": "npm run build && npm run build:tests && mocha temp && npm run test:typings",
+    "test:typings": "tsc test/typings.ts --outFile temp/typings.js --target ES2015 --moduleResolution node",
+    "prepublish": "npm run clean && npm run lint && npm test",
+    "docs:clean": "rimraf _book",
+    "docs:prepare": "gitbook install",
+    "docs:build": "npm run docs:prepare && gitbook build -g redux-observable/redux-observable && cp logo/apple-touch-icon.png _book/gitbook/images/apple-touch-icon-precomposed-152.png && cp logo/favicon.ico _book/gitbook/images",
+    "docs:watch": "npm run docs:prepare && gitbook serve",
+    "docs:publish": "npm run docs:clean && npm run docs:build && cp CNAME _book && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:redux-observable/redux-observable gh-pages --force"
   },
   "typings": "./index.d.ts",
   "files": [
@@ -71,6 +77,7 @@
     "chai": "^3.5.0",
     "cross-env": "^1.0.8",
     "eslint": "^2.10.2",
+    "gitbook-cli": "^0.3.4",
     "json-server": "^0.8.14",
     "mocha": "^2.4.5",
     "promise": "^7.1.1",
